fixes format logo display on small device

--- a/src/Movie/components/Item/styles.css
+++ b/src/Movie/components/Item/styles.css
@@ -35,7 +35,8 @@
   .infos {
     display: flex;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
+    flex-direction: column;
 
     & > * {
       margin-right: 5px;
